# backend/src/features/auth/model/entity/validatePasswordAuthEntity.go
@@ -1,0 +1,7 @@
+package entity
+
+type ValidatePasswordAuthEntity struct {
+	Email    string `json:"email"`
+	Code     string `json:"code"`
+	Password string `json:"password"`
+}
